--- a/src/html/newtab.html
+++ b/src/html/newtab.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>artelier:tab</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/suncalc/1.9.0/suncalc.min.js"></script>
-    <link rel="stylesheet" href="/src/css/style.css">
+    <script src="../lib/color-thief.min.js"></script>
+    <script src="../lib/suncalc.min.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
@@ -84,6 +84,6 @@
             <img id="artworkImage" crossorigin="anonymous" src="" alt="Artwork">
         </div>
     </div>
-    <script src="/src/js/app.js"></script>
+    <script src="../js/app.js"></script>
 </body>
 </html>
